package state

import (
	"bytes"
	"errors"
	"fmt"
	"time"

	"github.com/tendermint/tendermint/crypto/bls12381"

	abci "github.com/tendermint/tendermint/abci/types"
	"github.com/tendermint/tendermint/crypto"
	cryptoenc "github.com/tendermint/tendermint/crypto/encoding"
	"github.com/tendermint/tendermint/libs/fail"
	"github.com/tendermint/tendermint/libs/log"
	mempl "github.com/tendermint/tendermint/mempool"
	tmstate "github.com/tendermint/tendermint/proto/tendermint/state"
	tmproto "github.com/tendermint/tendermint/proto/tendermint/types"
	"github.com/tendermint/tendermint/proxy"
	"github.com/tendermint/tendermint/types"
)

//-----------------------------------------------------------------------------
// BlockExecutor handles block execution and state updates.
// It exposes ApplyBlock(), which validates & executes the block, updates state w/ ABCI responses,
// then commits and updates the mempool atomically, then saves state.

// BlockExecutor provides the context and accessories for properly executing a block.
type BlockExecutor struct {
	// save state, validators, consensus params, abci responses here
	store Store

	// execute the app against this
	proxyApp proxy.AppConnConsensus
	queryApp proxy.AppConnQuery

	// events
	eventBus types.BlockEventPublisher

	// manage the mempool lock during commit
	// and update both with block results after commit.
	mempool mempl.Mempool
	evpool  EvidencePool
	// the next core chain lock that we can propose
	NextCoreChainLock *types.CoreChainLock

	logger log.Logger

	metrics *Metrics

	appHashSize int
}

type BlockExecutorOption func(executor *BlockExecutor)

func BlockExecutorWithMetrics(metrics *Metrics) BlockExecutorOption {
	return func(blockExec *BlockExecutor) {
		blockExec.metrics = metrics
	}
}

// BlockExecutorWithAppHashSize is used to specify app-hash-size
func BlockExecutorWithAppHashSize(size int) BlockExecutorOption {
	return func(blockExec *BlockExecutor) {
		blockExec.appHashSize = size
	}
}

// NewBlockExecutor returns a new BlockExecutor with a NopEventBus.
// Call SetEventBus to provide one.
func NewBlockExecutor(
	stateStore Store,
	logger log.Logger,
	proxyApp proxy.AppConnConsensus,
	queryApp proxy.AppConnQuery,
	mempool mempl.Mempool,
	evpool EvidencePool,
	nextCoreChainLock *types.CoreChainLock,
	options ...BlockExecutorOption,
) *BlockExecutor {
	res := &BlockExecutor{
		store:             stateStore,
		proxyApp:          proxyApp,
		queryApp:          queryApp,
		eventBus:          types.NopEventBus{},
		mempool:           mempool,
		evpool:            evpool,
		NextCoreChainLock: nextCoreChainLock,
		logger:            logger,
		metrics:           NopMetrics(),
		appHashSize:       crypto.DefaultAppHashSize,
	}

	for _, option := range options {
		option(res)
	}

	return res
}

func (blockExec *BlockExecutor) Store() Store {
	return blockExec.store
}

// SetEventBus - sets the event bus for publishing block related events.
// If not called, it defaults to types.NopEventBus.
func (blockExec *BlockExecutor) SetEventBus(eventBus types.BlockEventPublisher) {
	blockExec.eventBus = eventBus
}

// CreateProposalBlock calls state.MakeBlock with evidence from the evpool
// and txs from the mempool. The max bytes must be big enough to fit the commit.
// Up to 1/10th of the block space is allocated for maximum sized evidence.
// The rest is given to txs, up to the max gas.
func (blockExec *BlockExecutor) CreateProposalBlock(
	height int64,
	state State,
	commit *types.Commit,
	proposerProTxHash []byte,
	proposedAppVersion uint64,
) (*types.Block, *types.PartSet) {

	maxBytes := state.ConsensusParams.Block.MaxBytes
	maxGas := state.ConsensusParams.Block.MaxGas

	evidence, evSize := blockExec.evpool.PendingEvidence(state.ConsensusParams.Evidence.MaxBytes)

	// Fetch a limited amount of valid txs
	maxDataBytes := types.MaxDataBytes(maxBytes, crypto.BLS12381, evSize, state.Validators.Size())

	txs := blockExec.mempool.ReapMaxBytesMaxGas(maxDataBytes, maxGas)

	nextCoreChainLock := blockExec.NextCoreChainLock

	if nextCoreChainLock != nil &&
		nextCoreChainLock.CoreBlockHeight <= state.LastCoreChainLockedBlockHeight {
		nextCoreChainLock = nil
	}

	// Pass proposed app version only if it's higher than current network app version
	if proposedAppVersion <= state.Version.Consensus.App {
		proposedAppVersion = 0
	}

	return state.MakeBlock(
		height,
		nextCoreChainLock,
		txs,
		commit,
		evidence,
		proposerProTxHash,
		proposedAppVersion,
	)
}

// ValidateBlock validates the given block against the given state.
// If the block is invalid, it returns an error.
// Validation does not mutate state, but does require historical information from the stateDB,
// ie. to verify evidence from a validator at an old height.
func (blockExec *BlockExecutor) ValidateBlock(state State, block *types.Block) error {
	err := validateBlock(state, block)
	if err != nil {
		return err
	}
	return blockExec.evpool.CheckEvidence(block.Evidence.Evidence)
}

// ValidateBlockChainLock validates the given block chain lock against the given state.
// If the block is invalid, it returns an error.
// Validation does not mutate state, but does require historical information from the stateDB,
// ie. to verify evidence from a validator at an old height.
func (blockExec *BlockExecutor) ValidateBlockChainLock(state State, block *types.Block) error {
	err := validateBlockChainLock(blockExec.queryApp, state, block)
	if err != nil {
		return err
	}
	return err
}

// ValidateBlockTime validates the given block time against the given state.
// If the block is invalid, it returns an error.
// Validation does not mutate state, but does require historical information from the stateDB,
// ie. to verify evidence from a validator at an old height.
func (blockExec *BlockExecutor) ValidateBlockTime(state State, block *types.Block) error {
	err := validateBlockTime(state, block)
	if err != nil {
		return err
	}
	return err
}

// ApplyBlock validates the block against the state, executes it against the app,
// fires the relevant events, commits the app, and saves the new state and responses.
// It returns the new state and the block height to retain (pruning older blocks).
// It's the only function that needs to be called
// from outside this package to process and commit an entire block.
// It takes a blockID to avoid recomputing the parts hash.
func (blockExec *BlockExecutor) ApplyBlock(
	state State, nodeProTxHash *crypto.ProTxHash, blockID types.BlockID, block *types.Block,
) (State, int64, error) {
	return blockExec.ApplyBlockWithLogger(state, nodeProTxHash, blockID, block, blockExec.logger)
}

// ApplyBlockWithLogger calls ApplyBlock with a specified logger making things easier for debugging
func (blockExec *BlockExecutor) ApplyBlockWithLogger(
	state State,
	nodeProTxHash *crypto.ProTxHash,
	blockID types.BlockID,
	block *types.Block,
	logger log.Logger,
) (State, int64, error) {

	if err := validateBlock(state, block); err != nil {
		return state, 0, ErrInvalidBlock(err)
	}

	startTime := time.Now().UnixNano()
	abciResponses, err := execBlockOnProxyApp(
		logger, blockExec.proxyApp, block, blockExec.store, state.InitialHeight,
	)
	endTime := time.Now().UnixNano()
	blockExec.metrics.BlockProcessingTime.Observe(float64(endTime-startTime) / 1000000)
	if err != nil {
		return state, 0, ErrProxyAppConn(err)
	}

	fail.Fail() // XXX

	// Save the results before we commit.
	if err := blockExec.store.SaveABCIResponses(block.Height, abciResponses); err != nil {
		return state, 0, err
	}

	fail.Fail() // XXX

	// validate the validator updates and convert to tendermint types
	abciValidatorSetUpdates := abciResponses.EndBlock.ValidatorSetUpdate
	err = validateValidatorSetUpdate(abciValidatorSetUpdates, state.ConsensusParams.Validator)
	if err != nil {
		return state, 0, fmt.Errorf("error in validator updates: %v", err)
	}

	nextCoreChainLock, err := types.CoreChainLockFromProto(
		abciResponses.EndBlock.NextCoreChainLockUpdate,
	)
	if err != nil {
		return state, 0, fmt.Errorf("error in chain lock from proto: %v", err)
	}

	validatorUpdates, thresholdPublicKeyUpdate, quorumHash, err :=
		types.PB2TM.ValidatorUpdatesFromValidatorSet(abciValidatorSetUpdates)
	if err != nil {
		return state, 0, fmt.Errorf("error when converting abci validator updates: %v", err)
	}
	if len(validatorUpdates) > 0 {
		blockExec.logger.Debug(
			"updates to validators",
			"quorumHash",
			quorumHash,
			"thresholdPublicKey",
			thresholdPublicKeyUpdate,
			"updates",
			types.ValidatorListString(validatorUpdates),
		)
	}

	/*
		_, err = blockExec.store.Load()
		if err != nil {
			return state, 0, fmt.Errorf("unable to load store when applying block: %v", err)
		}*/

	// Update the state with the block and responses.
	state, err = updateState(
		state, nodeProTxHash, blockID, &block.Header,
		abciResponses, validatorUpdates, thresholdPublicKeyUpdate, quorumHash,
	)
	if err != nil {
		return state, 0, fmt.Errorf("commit failed for application: %v", err)
	}

	// Lock mempool, commit app state, update mempoool.
	appHash, retainHeight, err := blockExec.Commit(state, block, abciResponses.DeliverTxs)
	if err != nil {
		return state, 0, fmt.Errorf("commit failed for application: %v", err)
	}

	// Update evpool with the latest state.
	blockExec.evpool.Update(state, block.Evidence.Evidence)

	// Update the next core chain lock that we can propose
	blockExec.NextCoreChainLock = nextCoreChainLock

	fail.Fail() // XXX

	// Update the app hash and save the state.
	state.AppHash = appHash
	if err := blockExec.store.Save(state); err != nil {
		return state, 0, err
	}

	fail.Fail() // XXX

	// Events are fired after everything else.
	// NOTE: if we crash between Commit and Save, events wont be fired during replay
	fireEvents(logger, blockExec.eventBus, block, abciResponses, validatorUpdates)

	return state, retainHeight, nil
}

// Commit locks the mempool, runs the ABCI Commit message, and updates the
// mempool.
// It returns the result of calling abci.Commit (the AppHash) and the height to retain (if any).
// The Mempool must be locked during commit and update because state is
// typically reset on Commit and old txs must be replayed against committed
// state before new txs are run in the mempool, lest they be invalid.
func (blockExec *BlockExecutor) Commit(
	state State,
	block *types.Block,
	deliverTxResponses []*abci.ResponseDeliverTx,
) ([]byte, int64, error) {
	blockExec.mempool.Lock()
	defer blockExec.mempool.Unlock()

	// while mempool is Locked, flush to ensure all async requests have completed
	// in the ABCI app before Commit.
	err := blockExec.mempool.FlushAppConn()
	if err != nil {
		blockExec.logger.Error("client error during mempool.FlushAppConn", "err", err)
		return nil, 0, err
	}

	// Commit block, get hash back
	res, err := blockExec.proxyApp.CommitSync()
	if err != nil {
		blockExec.logger.Error("client error during proxyAppConn.CommitSync", "err", err)
		return nil, 0, err
	}

	// we force the abci app to return only 32 byte app hashes (set to 20 temporarily)
	if res.Data != nil && len(res.Data) != blockExec.appHashSize {
		blockExec.logger.Error(
			"Client returned invalid app hash size", "bytesLength", len(res.Data),
		)
		return nil, 0, errors.New("invalid App Hash size")
	}

	// ResponseCommit has no error code - just data
	blockExec.logger.Info(
		"committed state",
		"height", block.Height,
		"core_height", block.CoreChainLockedHeight,
		"num_txs", len(block.Txs),
		"app_hash", fmt.Sprintf("%X", res.Data),
	)

	// Update mempool.
	err = blockExec.mempool.Update(
		block.Height,
		block.Txs,
		deliverTxResponses,
		TxPreCheck(state),
		TxPostCheck(state),
	)

	return res.Data, res.RetainHeight, err
}

//---------------------------------------------------------
// Helper functions for executing blocks and updating state

// Executes block's transactions on proxyAppConn.
// Returns a list of transaction results and updates to the validator set
func execBlockOnProxyApp(
	logger log.Logger,
	proxyAppConn proxy.AppConnConsensus,
	block *types.Block,
	store Store,
	initialHeight int64,
) (*tmstate.ABCIResponses, error) {
	var validTxs, invalidTxs = 0, 0

	txIndex := 0
	abciResponses := new(tmstate.ABCIResponses)
	dtxs := make([]*abci.ResponseDeliverTx, len(block.Txs))
	abciResponses.DeliverTxs = dtxs

	// Execute transactions and get hash.
	proxyCb := func(req *abci.Request, res *abci.Response) {
		if r, ok := res.Value.(*abci.Response_DeliverTx); ok {
			// TODO: make use of res.Log
			// TODO: make use of this info
			// Blocks may include invalid txs.
			txRes := r.DeliverTx
			if txRes.Code == abci.CodeTypeOK {
				validTxs++
			} else {
				logger.Debug("invalid tx", "code", txRes.Code, "log", txRes.Log)
				invalidTxs++
			}

			abciResponses.DeliverTxs[txIndex] = txRes
			txIndex++
		}
	}
	proxyAppConn.SetResponseCallback(proxyCb)

	commitInfo := abci.LastCommitInfo{
		Round:          block.LastCommit.Round,
		QuorumHash:     block.LastCommit.QuorumHash,
		BlockSignature: block.LastCommit.ThresholdBlockSignature,
		StateSignature: block.LastCommit.ThresholdStateSignature,
	}

	byzVals := make([]abci.Evidence, 0)
	for _, evidence := range block.Evidence.Evidence {
		byzVals = append(byzVals, evidence.ABCI()...)
	}

	// Begin block
	var err error
	pbh := block.Header.ToProto()
	if pbh == nil {
		return nil, errors.New("nil header")
	}

	abciResponses.BeginBlock, err = proxyAppConn.BeginBlockSync(abci.RequestBeginBlock{
		Hash:                block.Hash(),
		Header:              *pbh,
		LastCommitInfo:      commitInfo,
		ByzantineValidators: byzVals,
	})
	if err != nil {
		logger.Error("error in proxyAppConn.BeginBlock", "err", err)
		return nil, err
	}

	// run txs of block
	for _, tx := range block.Txs {
		proxyAppConn.DeliverTxAsync(abci.RequestDeliverTx{Tx: tx})
		if err := proxyAppConn.Error(); err != nil {
			return nil, err
		}
	}

	// End block.
	abciResponses.EndBlock, err = proxyAppConn.EndBlockSync(
		abci.RequestEndBlock{Height: block.Height},
	)
	if err != nil {
		logger.Error("error in proxyAppConn.EndBlock", "err", err)
		return nil, err
	}

	logger.Info(
		"executed block", "height", block.Height, "coreHeight",
		block.CoreChainLockedHeight, "num_valid_txs", validTxs,
		"num_invalid_txs", invalidTxs,
	)
	return abciResponses, nil
}

func validateValidatorSetUpdate(
	abciValidatorSetUpdate *abci.ValidatorSetUpdate,
	params tmproto.ValidatorParams,
) error {
	// if there was no update return no error
	if abciValidatorSetUpdate == nil {
		return nil
	}
	if len(abciValidatorSetUpdate.ValidatorUpdates) != 0 &&
		abciValidatorSetUpdate.ThresholdPublicKey.Sum == nil {
		return fmt.Errorf("received validator updates without a threshold public key")
	}
	return validateValidatorUpdates(abciValidatorSetUpdate.ValidatorUpdates, params)
}

func validateValidatorUpdates(abciUpdates []abci.ValidatorUpdate,
	params tmproto.ValidatorParams) error {
	for _, valUpdate := range abciUpdates {
		if valUpdate.GetPower() < 0 {
			return fmt.Errorf("voting power can't be negative %v", valUpdate)
		} else if valUpdate.GetPower() == 0 {
			// continue, since this is deleting the validator, and thus there is no
			// pubkey to check
			continue
		}

		// Check if validator's pubkey matches an ABCI type in the consensus params
		if valUpdate.PubKey != nil {
			pk, err := cryptoenc.PubKeyFromProto(*valUpdate.PubKey)
			if err != nil {
				return err
			}
			if !types.IsValidPubkeyType(params, pk.Type()) {
				return fmt.Errorf(
					"validator %v is using pubkey %s, which is unsupported for consensus",
					valUpdate,
					pk.Type(),
				)
			}

			if len(pk.Bytes()) != bls12381.PubKeySize {
				return fmt.Errorf("validator %X has incorrect public key size %v",
					valUpdate.ProTxHash, pk.String())
			}

			if pk.String() ==
				"PubKeyBLS12381{000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000}" {
				return fmt.Errorf("validator %X public key should not be empty %v",
					valUpdate.ProTxHash, pk.String())
			}
		}

		if valUpdate.ProTxHash == nil {
			return fmt.Errorf(
				"validator %v does not have a protxhash, which is needed for consensus",
				valUpdate,
			)
		}

		if len(valUpdate.ProTxHash) != 32 {
			return fmt.Errorf(
				"validator %v is using protxhash %s, which is not the required length",
				valUpdate,
				valUpdate.ProTxHash,
			)
		}
	}
	return nil
}

// updateState returns a new State updated according to the header and responses.
func updateState(
	state State,
	nodeProTxHash *crypto.ProTxHash,
	blockID types.BlockID,
	header *types.Header,
	abciResponses *tmstate.ABCIResponses,
	validatorUpdates []*types.Validator,
	newThresholdPublicKey crypto.PubKey,
	quorumHash crypto.QuorumHash,
) (State, error) {

	// Copy the valset so we can apply changes from EndBlock
	// and update s.LastValidators and s.Validators.
	nValSet := state.NextValidators.Copy()

	// Update the validator set with the latest abciResponses.
	lastHeightValsChanged := state.LastHeightValidatorsChanged
	if len(validatorUpdates) > 0 {
		if bytes.Equal(nValSet.QuorumHash, quorumHash) {
			err := nValSet.UpdateWithChangeSet(validatorUpdates, newThresholdPublicKey, quorumHash)
			if err != nil {
				return state, fmt.Errorf("error changing validator set: %v", err)
			}
			// Change results from this height but only applies to the next next height.
			lastHeightValsChanged = header.Height + 1 + 1
		} else {
			nValSet = types.NewValidatorSetWithLocalNodeProTxHash(validatorUpdates, newThresholdPublicKey,
				state.Validators.QuorumType, quorumHash, nodeProTxHash)
			// Change results from this height but only applies to the next next height.
			lastHeightValsChanged = header.Height + 1 + 1
		}
	}

	// Update validator proposer priority and set state variables.
	nValSet.IncrementProposerPriority(1)

	// Update the params with the latest abciResponses.
	nextParams := state.ConsensusParams
	lastHeightParamsChanged := state.LastHeightConsensusParamsChanged
	if abciResponses.EndBlock.ConsensusParamUpdates != nil {
		// NOTE: must not mutate s.ConsensusParams
		nextParams = types.UpdateConsensusParams(
			state.ConsensusParams,
			abciResponses.EndBlock.ConsensusParamUpdates,
		)
		err := types.ValidateConsensusParams(nextParams)
		if err != nil {
			return state, fmt.Errorf("error updating consensus params: %v", err)
		}

		state.Version.Consensus.App = nextParams.Version.AppVersion

		// Change results from this height but only applies to the next height.
		lastHeightParamsChanged = header.Height + 1
	}

	nextVersion := state.Version

	// NOTE: the AppHash has not been populated.
	// It will be filled on state.Save.
	return State{
		Version:                          nextVersion,
		ChainID:                          state.ChainID,
		InitialHeight:                    state.InitialHeight,
		LastBlockHeight:                  header.Height,
		LastBlockID:                      blockID,
		LastStateID:                      types.StateID{LastAppHash: state.AppHash},
		LastBlockTime:                    header.Time,
		LastCoreChainLockedBlockHeight:   header.CoreChainLockedHeight,
		NextValidators:                   nValSet,
		Validators:                       state.NextValidators.Copy(),
		LastValidators:                   state.Validators.Copy(),
		LastHeightValidatorsChanged:      lastHeightValsChanged,
		ConsensusParams:                  nextParams,
		LastHeightConsensusParamsChanged: lastHeightParamsChanged,
		LastResultsHash:                  ABCIResponsesResultsHash(abciResponses),
		AppHash:                          nil,
	}, nil
}

// Fire NewBlock, NewBlockHeader.
// Fire TxEvent for every tx.
// NOTE: if Tendermint crashes before commit, some or all of these events may be published again.
func fireEvents(
	logger log.Logger,
	eventBus types.BlockEventPublisher,
	block *types.Block,
	abciResponses *tmstate.ABCIResponses,
	validatorUpdates []*types.Validator,
) {
	if err := eventBus.PublishEventNewBlock(types.EventDataNewBlock{
		Block:            block,
		ResultBeginBlock: *abciResponses.BeginBlock,
		ResultEndBlock:   *abciResponses.EndBlock,
	}); err != nil {
		logger.Error("failed publishing new block", "err", err)
	}

	if err := eventBus.PublishEventNewBlockHeader(types.EventDataNewBlockHeader{
		Header:           block.Header,
		NumTxs:           int64(len(block.Txs)),
		ResultBeginBlock: *abciResponses.BeginBlock,
		ResultEndBlock:   *abciResponses.EndBlock,
	}); err != nil {
		logger.Error("failed publishing new block header", "err", err)
	}

	if len(block.Evidence.Evidence) != 0 {
		for _, ev := range block.Evidence.Evidence {
			if err := eventBus.PublishEventNewEvidence(types.EventDataNewEvidence{
				Evidence: ev,
				Height:   block.Height,
			}); err != nil {
				logger.Error("failed publishing new evidence", "err", err)
			}
		}
	}

	for i, tx := range block.Data.Txs {
		if err := eventBus.PublishEventTx(types.EventDataTx{TxResult: abci.TxResult{
			Height: block.Height,
			Index:  uint32(i),
			Tx:     tx,
			Result: *(abciResponses.DeliverTxs[i]),
		}}); err != nil {
			logger.Error("failed publishing event TX", "err", err)
		}
	}

	if len(validatorUpdates) > 0 {
		if err := eventBus.PublishEventValidatorSetUpdates(
			types.EventDataValidatorSetUpdates{ValidatorUpdates: validatorUpdates}); err != nil {
			logger.Error("failed publishing event", "err", err)
		}
	}
}

//----------------------------------------------------------------------------------------------------
// Execute block without state. TODO: eliminate

// ExecCommitBlock executes and commits a block on the proxyApp without validating or mutating the state.
// It returns the application root hash (result of abci.Commit).
func ExecCommitBlock(
	appConnConsensus proxy.AppConnConsensus,
	block *types.Block,
	logger log.Logger,
	store Store,
	initialHeight int64,
) ([]byte, error) {
	_, err := execBlockOnProxyApp(logger, appConnConsensus, block, store, initialHeight)
	if err != nil {
		logger.Error("failed executing block on proxy app", "height", block.Height, "err", err)
		return nil, err
	}

	// Commit block, get hash back
	res, err := appConnConsensus.CommitSync()
	if err != nil {
		logger.Error("client error during proxyAppConn.CommitSync", "err", res)
		return nil, err
	}

	// ResponseCommit has no error or log, just data
	return res.Data, nil
}
